[package]
name = "bigblockspam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytes = "1.4.0"
ethers = { version = "2.0.9", features = ["ws"] }
futures = "0.3.28"
hex = "0.4.3"
rand = "0.8.5"
sha3 = "0.10.8"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
